--- a/src/components/Timetable.module.css
+++ b/src/components/Timetable.module.css
@@ -68,6 +68,7 @@
 
 .platform {
   padding: 0.5rem 0;
+  white-space: nowrap;
 }
 
 .platform-link {
